--- a/tableViewAtoresEAtrizes/Base.lproj/Main.storyboard
+++ b/tableViewAtoresEAtrizes/Base.lproj/Main.storyboard
@@ -30,39 +30,40 @@
                                 <rect key="frame" x="0.0" y="75" width="414" height="787"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellHumano" rowHeight="46" id="ALy-Dt-Z5K" customClass="SerHumanoTableViewCell" customModule="tableViewAtoresEAtrizes" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="46"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellHumano" id="azt-vT-ZcX" customClass="SerHumanoTableViewCell" customModule="tableViewAtoresEAtrizes" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="30.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ALy-Dt-Z5K" id="VT1-Ew-zoF">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="46"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="azt-vT-ZcX" id="YuB-BZ-1ws">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="30.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cL6-8K-jVS">
-                                                    <rect key="frame" x="30" y="5" width="80" height="36"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="80" id="Dlg-MC-kGK"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4AZ-BW-eNa">
-                                                    <rect key="frame" x="110" y="16" width="274" height="14"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vWW-XN-Rcg" userLabel="nomeSerHumanoLabel">
+                                                    <rect key="frame" x="95" y="5" width="314" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nzY-JF-trF">
+                                                    <rect key="frame" x="0.0" y="0.0" width="95" height="30.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="KJY-1P-JJM"/>
+                                                        <constraint firstAttribute="width" constant="95" id="zKu-5N-LoA"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="4AZ-BW-eNa" firstAttribute="top" secondItem="VT1-Ew-zoF" secondAttribute="topMargin" constant="5" id="3Cc-DP-9Wr"/>
-                                                <constraint firstItem="cL6-8K-jVS" firstAttribute="top" secondItem="VT1-Ew-zoF" secondAttribute="top" constant="5" id="4ZO-dd-IUU"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="4AZ-BW-eNa" secondAttribute="bottom" constant="5" id="EGx-iu-A82"/>
-                                                <constraint firstAttribute="bottom" secondItem="cL6-8K-jVS" secondAttribute="bottom" constant="5" id="S69-uH-yOK"/>
-                                                <constraint firstItem="cL6-8K-jVS" firstAttribute="leading" secondItem="VT1-Ew-zoF" secondAttribute="leading" constant="30" id="d6s-hd-4AT"/>
-                                                <constraint firstItem="4AZ-BW-eNa" firstAttribute="leading" secondItem="cL6-8K-jVS" secondAttribute="trailing" id="hGm-aR-45e"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="4AZ-BW-eNa" secondAttribute="trailing" constant="10" id="kpG-5f-gZ0"/>
+                                                <constraint firstAttribute="bottom" secondItem="vWW-XN-Rcg" secondAttribute="bottom" constant="5" id="2dS-Hu-KWa"/>
+                                                <constraint firstAttribute="bottom" secondItem="nzY-JF-trF" secondAttribute="bottom" id="MuY-io-jzf"/>
+                                                <constraint firstItem="vWW-XN-Rcg" firstAttribute="top" secondItem="YuB-BZ-1ws" secondAttribute="top" constant="5" id="b1h-Y8-LS6"/>
+                                                <constraint firstItem="nzY-JF-trF" firstAttribute="leading" secondItem="YuB-BZ-1ws" secondAttribute="leading" id="flT-Wi-vbh"/>
+                                                <constraint firstItem="nzY-JF-trF" firstAttribute="top" secondItem="YuB-BZ-1ws" secondAttribute="top" id="h0W-1j-YZc"/>
+                                                <constraint firstItem="vWW-XN-Rcg" firstAttribute="leading" secondItem="nzY-JF-trF" secondAttribute="trailing" id="uMx-Tu-gVz"/>
+                                                <constraint firstAttribute="trailing" secondItem="vWW-XN-Rcg" secondAttribute="trailing" constant="5" id="wj1-bA-hmm"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="imagemSerHumano" destination="cL6-8K-jVS" id="lcd-Lr-oLj"/>
-                                            <outlet property="nomeSerHumanoLabel" destination="4AZ-BW-eNa" id="T8f-FW-5IR"/>
+                                            <outlet property="imagemSerHumano" destination="nzY-JF-trF" id="lba-xZ-6LZ"/>
+                                            <outlet property="nomeSerHumanoLabel" destination="vWW-XN-Rcg" id="MvH-l8-KuG"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -87,7 +88,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1165" y="-44"/>
+            <point key="canvasLocation" x="-1165.217391304348" y="-44.196428571428569"/>
         </scene>
     </scenes>
     <resources>
